[gd_scene load_steps=20 format=2]

[ext_resource path="res://Fonts and themes/Font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Bars/sheild.png" type="Texture" id=2]
[ext_resource path="res://Bars/meter_icon_holder_blue.png" type="Texture" id=3]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=4]
[ext_resource path="res://Bars/meter_icon_holder_red.png" type="Texture" id=5]
[ext_resource path="res://Bars/power.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 42
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0.85098, 0.85098, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.215686, 0.215686, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0.215686, 0.215686, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.215686, 0.215686, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0.85098, 0.85098, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.215686, 0.215686, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0.215686, 0.215686, 0.627451 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.215686, 0.215686, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.807843, 0.168627, 0.168627, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.266667, 0.0745098, 0.0745098, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.266667, 0.0745098, 0.0745098, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.215686, 0.0588235, 0.0588235, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.266667, 0.0745098, 0.0745098, 0.588235 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.215686, 0.0588235, 0.0588235, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("LaserBar:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LaserBarUnder:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LaserBarUnder:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LaserBar:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ShieldBar:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ShieldBarUnder:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ShieldBar/MeterIconHolderBlue:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "laserbarsAppear"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("LaserBar:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LaserBarUnder:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LaserBarUnder:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LaserBar:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=14]
resource_name = "laserbarsDisappear"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("LaserBarUnder:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LaserBarUnder:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LaserBar:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LaserBar:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ShieldBarUnder:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ShieldBar:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "shieldLevelCritical"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ShieldBarUnder:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ShieldBar:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="HUD" type="CanvasLayer"]
layer = 2
script = ExtResource( 4 )

[node name="ScoreText" type="Label" parent="."]
margin_left = 24.0
margin_top = 14.0
margin_right = 114.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "Score: "

[node name="ShieldBarUnder" type="ProgressBar" parent="."]
margin_left = 759.0
margin_top = 14.0
margin_right = 1002.0
margin_bottom = 39.0
custom_styles/fg = SubResource( 10 )
custom_styles/bg = SubResource( 11 )
value = 50.0
percent_visible = false

[node name="ShieldBar" type="ProgressBar" parent="."]
margin_left = 759.0
margin_top = 14.0
margin_right = 1002.0
margin_bottom = 39.0
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
value = 50.0
percent_visible = false

[node name="MeterIconHolderBlue" type="Sprite" parent="ShieldBar"]
position = Vector2( 0, 25 )
scale = Vector2( 0.09, 0.09 )
texture = ExtResource( 3 )

[node name="Sheild" type="Sprite" parent="ShieldBar/MeterIconHolderBlue"]
modulate = Color( 0, 0.505882, 0.505882, 1 )
texture = ExtResource( 2 )

[node name="LaserBarUnder" type="ProgressBar" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 759.0
margin_top = 75.0
margin_right = 1002.0
margin_bottom = 100.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 7 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_group_": true
}

[node name="LaserBar" type="ProgressBar" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 759.0
margin_top = 75.0
margin_right = 1002.0
margin_bottom = 100.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 6 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_group_": true
}

[node name="MeterIconHolderBlue" type="Sprite" parent="LaserBar"]
position = Vector2( 0, 25 )
scale = Vector2( 0.09, 0.09 )
texture = ExtResource( 5 )

[node name="Sheild" type="Sprite" parent="LaserBar/MeterIconHolderBlue"]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 6 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 12 )
anims/laserbarsAppear = SubResource( 13 )
anims/laserbarsDisappear = SubResource( 14 )

[node name="AnimationPlayerShield" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 15 )
anims/shieldLevelCritical = SubResource( 16 )
